--- a/cluster/aws.yaml
+++ b/cluster/aws.yaml
@@ -21,12 +21,13 @@ spec:
         store: true
         secrets:
           - fromSecret: dynatrace-tokens
-            toSecret: else
+            toSecret: a-team-cluster
             toNamespace: dynatrace
       traefik:
         enabled: true
       dynatrace:
         enabled: true
+        apiUrl: https://ypd98635.sprint.dynatracelabs.com//api
     creds:
       name: aws-creds
       namespace: crossplane-system
