--- a/cluster/aws.yaml
+++ b/cluster/aws.yaml
@@ -19,15 +19,15 @@ spec:
       externalSecrets:
         enabled: true
         store: true
-        secrets:
-          - fromSecret: dynatrace-tokens
-            toSecret: a-team-cluster
-            toNamespace: dynatrace
+        # secrets:
+        #   - fromSecret: dynatrace-tokens
+        #     toSecret: a-team-cluster
+        #     toNamespace: dynatrace
       traefik:
         enabled: true
-      dynatrace:
-        enabled: true
-        apiUrl: https://ypd98635.sprint.dynatracelabs.com//api
+      # dynatrace:
+      #   enabled: true
+      #   apiUrl: https://ypd98635.sprint.dynatracelabs.com//api
     creds:
       name: aws-creds
       namespace: crossplane-system
