Extend/Improve Dynatrace configuration

--- a/observability/dynatrace/dynakube.yaml
+++ b/observability/dynatrace/dynakube.yaml
@@ -8,12 +8,14 @@ metadata:
 spec:
   apiUrl: https://ypd98635.sprint.dynatracelabs.com/api
   oneAgent:
-    applicationMonitoring:
-      useCSIDriver: true
+    cloudNativeFullStack:
+      image: ""
   activeGate:
     capabilities:
       - kubernetes-monitoring
       - routing
+      - metrics-ingest
+      - dynatrace-api
     image: ""
     resources:
       requests:
