--- a/db/aws-2.yaml
+++ b/db/aws-2.yaml
@@ -20,6 +20,12 @@ spec:
       pushToStore: true
       pullToCluster: a-team-cluster-2
       pullToClusterNamespace: production
+    dynatraceDashboard:
+      enabled: true
+      oathCredentialsSecretName: dynatrace-tokens-2
+      cluster: a-team-cluster-2
+      appDeploymentName: silly-demo
+      appNamespace: production
     schemas:
       - database: my-db
         sql: |
