--- a/db/aws-2.yaml
+++ b/db/aws-2.yaml
@@ -26,6 +26,7 @@ spec:
       cluster: a-team-cluster-2
       appDeploymentName: silly-demo
       appNamespace: production
+      slackChannel: "a-team"
     schemas:
       - database: my-db
         sql: |
