--- a/observability/dynatrace/crossplane-observability-demo-config.values.yaml
+++ b/observability/dynatrace/crossplane-observability-demo-config.values.yaml
@@ -1,4 +1,4 @@
-oauthCredentialsSecretName: oauth-credentials
+oauthCredentialsSecretName: dynatrace-tokens
 
 cluster: crossplane-observability-demo
 
